# ESP32S3R8_LVGL_DEMO

./: README.md
gui-guider-demo/Test/Test_Pro/: Test_Pro.guiguider
gui-guider-demo/Test/Test_Pro/temp/: board.h  simulator.h
gui-guider-demo/components/: CMakeLists.txt
gui-guider-demo/main/: idf_component.yml  main.c
sample_project/: sdkconfig
sample_project/main/: idf_component.yml  main.c
